  see: https://github.com/rsyslog/rsyslog/pull/771
  Thanks to Sam Hanes for the patch.
- bugfix TLS syslog: intermittent errors while sending data
  Regression from commit 1394e0b. A symptom often seen was the message
  "unexpected GnuTLS error -50 in nsd_gtls.c:530"
- bugfix imfile: abort on startup if no slash was present in file name param
  Thanks to Brian Knox for the patch.
------------------------------------------------------------------------------
Version 8.16.0 [v8-stable] 2016-01-26
- rsgtutil: Added extraction support including loglines and hash chains. 
  More details on how to extract loglines can be found in the rsgtutil
  manpage. See also: https://github.com/rsyslog/rsyslog/issues/561   
- clean up doAction output module interface
  We started with char * pointers, but used different types of pointers
  over time. This lead to alignment warnings. In practice, I think this
  should never cause any problems (at least there have been no reports
  in the 7 or so years we do this), but it is not clean. The interface is
  now cleaned up. We do this in a way that does not require modifications
  to modules that just use string parameters. For those with message
  parameters, have a look at e.g. mmutf8fix to see how easy the
  required change is.
- new system properties for $NOW properties based on UTC
  This permits to express current system time in UTC.
  See also https://github.com/rsyslog/rsyslog/issues/729
- impstats: support broken ElasticSearch JSON implementation
  ES 2.0 no longer supports valid JSON and disallows dots inside names.
  This adds a new "json-elasticsearch" format option which replaces
  those dots by the bang ("!") character. So "discarded.full" becomes
  "discarded!full".
  This is a workaroud. A method that will provide more control over
  replacements will be implemented some time in the future. For
  details, see below-quoted issue tracker.
  closes https://github.com/rsyslog/rsyslog/issues/713