@@ -108,6 +108,8 @@ Version 8.17.0 [v8-stable] 2016-03-08
   "unexpected GnuTLS error -50 in nsd_gtls.c:530"
 - bugfix imfile: abort on startup if no slash was present in file name param
   Thanks to Brian Knox for the patch.
+- rsgtutil: Fixed getopt_long parameter colons 
+  Thanks to Henri Lakk 
 ------------------------------------------------------------------------------
 Version 8.16.0 [v8-stable] 2016-01-26
 - rsgtutil: Added extraction support including loglines and hash chains. 
